fix Group info overlaps group image in smaller screens

--- a/app/assets/stylesheets/modules/modules/_admin_group.scss
+++ b/app/assets/stylesheets/modules/modules/_admin_group.scss
@@ -19,13 +19,11 @@
   }
 
   .group-image {
-    display: inline-block;
-    width: 20%;
+    margin-right: 10px;
     float: left;
   }
 
   .group-information {
-    display: inline-block;
     float: left;
   }
 
